PrefList Page Start and Backing Bean

--- a/MERJMirrorWeb/WebContent/WEB-INF/web.xml
+++ b/MERJMirrorWeb/WebContent/WEB-INF/web.xml
@@ -8,8 +8,8 @@
   <display-name>MERJMirrorWeb</display-name>
   
   <welcome-file-list>
-    <welcome-file>tester.xhtml</welcome-file>
-    <welcome-file>tester.jsf</welcome-file>
+    <welcome-file>start.xhtml</welcome-file>
+    <welcome-file>start.jsf</welcome-file>
   </welcome-file-list>
   
   <servlet>
@@ -43,6 +43,11 @@
   <context-param>
     <param-name>javax.servlet.jsp.jstl.fmt.localizationContext</param-name>
     <param-value>resources.application</param-value>
+  </context-param>
+  
+  <context-param>
+    <param-name>com.sun.faces.expressionFactory</param-name>
+    <param-value>org.jboss.el.ExpressionFactoryImpl</param-value>
   </context-param>
   
   <context-param>
