--- a/MERJMirrorWeb/src/resources/config.properties
+++ b/MERJMirrorWeb/src/resources/config.properties
@@ -4,9 +4,20 @@ footer.message = MERJ Mirror Web App  Written by Ryan Cross\nLast Updated by Rya
 
 page.title = MERJ Mirror Web App
 
-menu.label = Menu
-menu.user = Change User
-menu.new = New
-menu.new.user = New User
-menu.new.pref = New Preference Set
+label.menu = Menu
+label.menu.user = Change User
+label.menu.new = New
+label.menu.new.user = New User
+label.menu.new.pref = New Preference Set
+label.menu.config = Config File (Admin)
+label.menu.pref = Preference List
 
+label.pref = List of Your Preferences:
+label.pref.table = List of saved Preferences
+
+pref.table.active = Active Preference
+pref.table.id = Preference ID
+pref.table.name = Preference Name
+pref.table.data = Data to be displayed
+
+label.button.active = Set Active Preference
