Formating, Corrected the error with App Config, Switched all label and text to come from app config

--- a/MERJMirrorWeb/src/resources/config.properties
+++ b/MERJMirrorWeb/src/resources/config.properties
@@ -1,23 +1,78 @@
+# Application Config file fot the Merj Mirror Web App
+# Written by: Ryan
+# Last edited by: Ryan
+# Date Edited on: 10-20-2017
+
+# Button Labels 
+button.label.cancel = Cancel
+button.label.change = Change
+button.label.create = Create
+button.label.edit   = Edit
+button.label.enter  = Enter
+button.label.reload = Reload
+
+button.label.pref.active = Set Active Preference
+button.label.pref.create = Create New Preference
+button.label.pref.delete = Delete Preference
+button.label.pref.edit   = Edit Selected Preference
+
+button.label.user.delete = Delete User
+button.label.user.edit   = Change Username
+button.label.user.new    = New User
+button.label.user.set    = Set Active User
+
+# Database Name
 jndi.name = MERJMirror
 
-footer.message = MERJ Mirror Web App  Written by Ryan Cross\nLast Updated by Ryan Cross    Updated Date 9-28-2017
+# Labels for config page
+label.config = Config Settings List
+
+# Labels for the Menu
+label.menu          = Menu
+label.menu.config   = Config File (Admin)
+label.menu.new      = New
+label.menu.new.pref = New Preference Set
+label.menu.new.user = New User
+label.menu.pref     = Preference List
+label.menu.user     = Change User
+
+# Labels for the Preference Pages
+label.pref       = List of Your Preferences:
+label.pref.empty = Empty
+label.pref.sides = Activate the Side Options
+label.pref.sign  = Horoscope Sign:
+label.pref.stock = Stock Tick Codes:
+label.pref.title = Title for Preference:
+label.pref.zip   = Weather Zip Code:
+
+# Labels for the User Pages
+label.user       = Select User:
+label.user.name  = Username:
+label.user.start = Select User:
+
+# Page Settings
+page.background.color = #b3daff
 
 page.title = MERJ Mirror Web App
 
-label.menu = Menu
-label.menu.user = Change User
-label.menu.new = New
-label.menu.new.user = New User
-label.menu.new.pref = New Preference Set
-label.menu.config = Config File (Admin)
-label.menu.pref = Preference List
-
-label.pref = List of Your Preferences:
-label.pref.table = List of saved Preferences
+# Preference Page Setting and Messages
+pref.delete.header  = Confirmation
+pref.delete.message = Do you want to Delete Selected Preference?
 
 pref.table.active = Active Preference
-pref.table.id = Preference ID
-pref.table.name = Preference Name
-pref.table.data = Data to be displayed
+pref.table.data   = Data to be displayed
+pref.table.empty  = You have no Saved Preferences.
+pref.table.id     = Preference ID
+pref.table.name   = Preference Name
 
-label.button.active = Set Active Preference
+# User Page Settings and Messages
+user.delete.header  = Confirmation
+user.delete.message = Are you sure?
+
+user.edit.header = Change Username
+
+user.new.header = New User
+
+# Template Settings and Messages
+template.content.default = This is a bad sign. Template did not work.
+template.footer.message = MERJ Mirror Web App    Written by: Ryan Cross\nLast Updated by: Ryan Cross    Updated Date 10-20-2017
