--- a/MERJMirrorWeb/.classpath
+++ b/MERJMirrorWeb/.classpath
@@ -1,30 +1,26 @@
-<?xml version="1.0" encoding="UTF-8"?>
+<?xml version = "1.0" encoding = "UTF-8"?>
 <classpath>
-	<classpathentry exported="true" kind="lib" path="C:/Users/Flarwalker/Documents/Codding/Libraries/primefaces-6.1.jar"/>
-	<classpathentry kind="src" path="src"/>
-	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.USER_LIBRARY/JSF">
+	<classpathentry exported = "true" kind = "lib" path = "WebContent/WEB-INF/lib/primefaces-6.1.jar"/>
+	<classpathentry exported = "true" kind = "lib" path = "WebContent/WEB-INF/lib/jboss-el.jar"/>
+	<classpathentry exported = "true" kind = "lib" path = "WebContent/WEB-INF/lib/javax.faces-2.2.4.jar"/>
+	<classpathentry kind = "src" path = "src"/>
+	<classpathentry kind = "con" path = "org.eclipse.jdt.USER_LIBRARY/JSTL 1.2 (JavaServer Pages Standard Tag Library (JSTL) 1.2.0.1)">
 		<attributes>
-			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
-			<attribute name="owner.project.facets" value="jst.jstl;jst.jsf"/>
+			<attribute name = "org.eclipse.jst.component.dependency" value = "/WEB-INF/lib"/>
+			<attribute name = "owner.project.facets" value = "jst.jstl"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/jdk1.7.0_80">
+	<classpathentry kind = "con" path = "org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/jdk1.7.0_80">
 		<attributes>
-			<attribute name="owner.project.facets" value="java"/>
+			<attribute name = "owner.project.facets" value = "java"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="con" path="oracle.eclipse.tools.weblogic.lib.system">
+	<classpathentry kind = "con" path = "oracle.eclipse.tools.weblogic.lib.system">
 		<attributes>
-			<attribute name="owner.project.facets" value="jst.web"/>
+			<attribute name = "owner.project.facets" value = "jst.web"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.web.container"/>
-	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/JSTL 1.2 (JavaServer Pages Standard Tag Library (JSTL) 1.2.0.1)">
-		<attributes>
-			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
-			<attribute name="owner.project.facets" value="jst.jstl"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="output" path="build/classes"/>
+	<classpathentry kind = "con" path = "org.eclipse.jst.j2ee.internal.web.container"/>
+	<classpathentry kind = "con" path = "org.eclipse.jst.j2ee.internal.module.container"/>
+	<classpathentry kind = "output" path = "build/classes"/>
 </classpath>
