Adding in he correct data for the APIs

--- a/MERJMirrorWeb/src/resources/config.properties
+++ b/MERJMirrorWeb/src/resources/config.properties
@@ -1,4 +1,4 @@
-# Application Config file fot the Merj Mirror Web App
+# Application Config file for the MERJ Mirror Web Application
 # Written by: Ryan
 # Last edited by: Ryan
 # Date Edited on: 10-20-2017
@@ -24,8 +24,8 @@ button.label.user.set    = Set Active User
 # Database Name
 jndi.name = MERJMirror
 
-# Labels for config page
-label.config = Config Settings List
+# Labels for Config page
+label.config = Configuration Settings List
 
 # Labels for the Menu
 label.menu          = Menu
@@ -37,13 +37,19 @@ label.menu.pref     = Preference List
 label.menu.user     = Change User
 
 # Labels for the Preference Pages
-label.pref       = List of Your Preferences:
-label.pref.empty = Empty
-label.pref.sides = Activate the Side Options
-label.pref.sign  = Horoscope Sign:
-label.pref.stock = Stock Tick Codes:
-label.pref.title = Title for Preference:
-label.pref.zip   = Weather Zip Code:
+label.pref             = List of Your Preferences:
+label.pref.city        = City to check Weather:
+label.pref.city.info   = Weather will default to Toledo Ohio if nothing is entered
+label.pref.empty       = Empty
+label.pref.sides       = Activate the Side Options
+label.pref.sign        = Horoscope Sun Sign:
+label.pref.source      = New Source:
+label.pref.source.info = Select the New Source from the list
+label.pref.state       = State of city:
+label.pref.state.info  = Please enter the States 2 letter Abbreviation
+label.pref.stock       = Stock Tick Codes:
+label.pref.stock.info  = Enter up to 10 ticking codes seperated by a space.
+label.pref.title       = Title for Preference:
 
 # Labels for the User Pages
 label.user       = Select User:
@@ -75,4 +81,4 @@ user.new.header = New User
 
 # Template Settings and Messages
 template.content.default = This is a bad sign. Template did not work.
-template.footer.message = MERJ Mirror Web App    Written by: Ryan Cross\nLast Updated by: Ryan Cross    Updated Date 10-20-2017
+template.footer.message = MERJ Mirror Web App    Written by: Ryan Cross\nLast Updated by: Ryan Cross    Updated Date 11-12-2017
