Fixing the Edit Preference Button

--- a/MERJMirrorWeb/src/resources/config.properties
+++ b/MERJMirrorWeb/src/resources/config.properties
@@ -41,6 +41,7 @@ label.pref             = List of Your Preferences:
 label.pref.city        = City to check Weather:
 label.pref.city.info   = Weather will default to Toledo Ohio if nothing is entered
 label.pref.empty       = Empty
+label.pref.reminder    = Reminder Message
 label.pref.sides       = Activate the Side Options
 label.pref.sign        = Horoscope Sun Sign:
 label.pref.source      = New Source:
